# voice-rag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  voice-rag.yaml
.github/workflows/: ci.yml  publish.yml
data/sample_docs/: claude-code-changelog.md  the-adventure-of-the-speckled-band.md
scripts/: smoke_test.sh
tests/: test_agent.py  test_chunking.py  test_cli.py  test_config.py  test_embeddings_openai.py  test_llm_anthropic.py  test_llm_gemini.py  test_llm_openai.py  test_models.py  test_parsers.py  test_retrieval.py  test_server.py  test_streaming.py  test_vector_store_qdrant.py  test_voice_deepgram.py  test_voice_elevenlabs.py
voice_rag/: __init__.py  _version.py  agent.py  server.py
voice_rag/cli/: __main__.py  commands.py
voice_rag/connectors/embeddings/: __init__.py  base.py  openai.py
voice_rag/connectors/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
voice_rag/connectors/parsers/: __init__.py  base.py  docx.py  markdown.py  pdf.py  text.py
voice_rag/connectors/vector_stores/: __init__.py  base.py  qdrant.py
voice_rag/connectors/voice/: __init__.py  base.py  deepgram.py  elevenlabs.py
voice_rag/core/: chunking.py  config.py  models.py  retrieval.py  streaming.py
